--- a/01-fundamentos/bloco-03-intro-html-css/dia-02-primeiros-passos-css/index1.html
+++ b/01-fundamentos/bloco-03-intro-html-css/dia-02-primeiros-passos-css/index1.html
@@ -3,45 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-
-        h1 {
-            color: rgb(247, 135, 30);
-            width: 65px;
-            font-family: sans-serif;
-        }
-        #lista {
-            background-color: rgb(83, 216, 83);
-            width: 47%;
-        }
-        .pul {
-            background-color: lightcoral;
-            line-height: 140%;
-        }
-        p {
-          font-weight: 600;
-          font-size: 3em;
-          font-style: italic;
-          text-align: center;
-          text-decoration-line:underline;
-          width: 50%;
-        }
-        body {
-          font-size: 16px;
-        }
-        #item-1 {
-          background:rgb(82, 82, 214);
-          line-height: 20px;
-        }
-        #item-2 {
-          background: rgb(230, 67, 67);
-          line-height: 20px;
-        }
-        #item-3 {
-          background: rgb(250, 250, 87);
-          line-height: 20px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
