Arq index3 finalizado

--- a/01-fundamentos/bloco-03-intro-html-css/dia-03-seletores-posicionamento/index3.html
+++ b/01-fundamentos/bloco-03-intro-html-css/dia-03-seletores-posicionamento/index3.html
@@ -7,9 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="padding">
   <div class="caixa width-and-height" style="background: #036b52">A</div>
   <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
+<div class="margin">
   <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
+</div>
+<div class="border">
   <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
+  </div> 
+</div>  
 </body>
 </html>
