--- a/01-fundamentos/bloco-03-intro-html-css/dia-03-seletores-posicionamento/fixacao2/exercDeFixação2.html
+++ b/01-fundamentos/bloco-03-intro-html-css/dia-03-seletores-posicionamento/fixacao2/exercDeFixação2.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <h1>Exercícios de fixação 3.3</h1>
+    <div id="borda">
     <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
     <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
     <img src="https://bit.ly/3AVnjks" alt="bowser" class="bowser" />
+    </div>
     <p class="speach">
       Goomba, do something!
     </p>
