--- a/01-fundamentos/bloco-03-intro-html-css/dia-03-seletores-posicionamento/fixacao3/seletores.html
+++ b/01-fundamentos/bloco-03-intro-html-css/dia-03-seletores-posicionamento/fixacao3/seletores.html
@@ -8,6 +8,16 @@
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
     <p>Top 3 dos melhores sites que existem na web</p>
+    <ol>
+        <li class="itens">Stack Overflow</li>
+        <li class="itens">Curso em Vídeo</li>
+        <li class="itens">Udemy</li>
+    </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <li>Há material em inglês</li>
+        <li>Há ótimos professores</li>
+        <li>Há pessoas dispostas a ajudar com suas dúvidas</li>
+    </ul>
   </body>
 </html>
