--- a/01-fundamentos/bloco-05-DOM-eventos-web_storage/5.2/fix.html
+++ b/01-fundamentos/bloco-05-DOM-eventos-web_storage/5.2/fix.html
@@ -1,4 +1,13 @@
-<main id="paiDoPai">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <main id="paiDoPai">
     <section id="pai">
       <section id="primeiroFilho"></section>
       <section id="elementoOndeVoceEsta">
@@ -11,3 +20,5 @@
     </section>
     <script src="fix.js"></script>
   </main>
+</body>
+</html>
