Exc 6.1 em progresso

--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
@@ -31,10 +31,13 @@
         <label for="home">
         <input type="radio" id="residencia-2" name="home">Apartamento
         </label>
-        <!--  -->
     </fieldset>
     <fieldset>
-        
+        <textarea id="resumo-curriculo" name="curriculo" maxlength="1000"></textarea><br>
+        <label for="cargo">Cargo Atual:</label>
+        <input type="text" id="cargo-atual" name="cargo" maxlength="40"><br><br>
+        <label for="cargo-descrito">Descrição do cargo:</label>
+        <input type="text" id="cargo-descricao" name="cargo-descrito" maxlength="500"><br><br>
     </fieldset>
     </form>
 </main>
