Atv 6.1 em progresso no requisito 3

--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
@@ -10,6 +10,7 @@
 <body>
 <main>
     <form action="" method="post">
+        <!-- method get ou post -->
     <fieldset>
         <legend>Dados Cadastrais</legend>
         <label for="name">Nome:</label>
@@ -41,6 +42,7 @@
         <input type="text" id="cargo-descricao" name="cargo-descrito" maxlength="500"><br><br>
         <label for="date">Data de início:</label>
         <input type="text" id="dates" name="date" maxlength="10"><br><br>
+    <button id="btn">Submit</button>
     </fieldset>
     </form>
 </main>
