--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
@@ -27,11 +27,13 @@
         <select id="states" name="estados"></select><br>
         <p>Residência:</p>
         <label for="home-1">
+        <div>
         <input type="radio" id="residencia-1" name="home" checked>Casa
         </label>
         <label for="home">
         <input type="radio" id="residencia-2" name="home">Apartamento
         </label>
+        </div>
     </fieldset>
     <fieldset>
         <label for="curriculo">Resumo do Currículo:</label><br>
@@ -43,6 +45,8 @@
         <label for="date">Data de início:</label>
         <input type="text" id="dates" name="date" maxlength="10"><br><br>
     <button id="btn">Submit</button>
+    <button id="btn-clear"></button>
+    <div id="dados"></div>
     </fieldset>
     </form>
 </main>
