--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
@@ -45,7 +45,7 @@
         <label for="date">Data de início:</label>
         <input type="text" id="dates" name="date" maxlength="10"><br><br>
     <button id="btn">Submit</button>
-    <button id="btn-clear"></button>
+    <button id="btn-clear">Limpar</button>
     <div id="dados"></div>
     </fieldset>
     </form>
