--- a/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
+++ b/01-fundamentos/bloco-06-forms-flexbox-responsivo/6.1/form.html
@@ -10,37 +10,43 @@
 <body>
 <main>
     <form action="" method="post">
+        <!-- method get ou post -->
     <fieldset>
         <legend>Dados Cadastrais</legend>
         <label for="name">Nome:</label>
-        <input type="text" id="names" name="name" maxlength="40"><br><br>
+        <input type="text" class="dados-cadastro" id="names" name="name" maxlength="40"><br><br>
         <label for="email">E-mail:</label>
-        <input type="text" id="emails" name="email" maxlength="50"><br><br>
+        <input type="text" class="dados-cadastro" id="emails" name="email" maxlength="50"><br><br>
         <label for="CPF">CPF:</label>
-        <input type="text" id="cpfs" name="CPF" maxlength="11"><br><br>
+        <input type="text" class="dados-cadastro" id="cpfs" name="CPF" maxlength="11"><br><br>
         <label for="endereco">Endereço:</label>
-        <input type="text" id="end" name="endereco" maxlength="200"><br><br>
+        <input type="text" class="dados-cadastro" id="end" name="endereco" maxlength="200"><br><br>
         <label for="city">Cidade:</label>
-        <input type="text" id="citys" name="city" maxlength="28"><br><br>
+        <input type="text" class="dados-cadastro" id="citys" name="city" maxlength="28"><br><br>
         <label for="estados">Estados:</label>
-        <select id="states" name="estados"></select><br>
+        <select class="dados-cadastro" id="states" name="estados"></select><br>
         <p>Residência:</p>
-        <label for="home-1">
+        <div>
+        <label for="home">
         <input type="radio" id="residencia-1" name="home" checked>Casa
         </label>
         <label for="home">
         <input type="radio" id="residencia-2" name="home">Apartamento
         </label>
+        </div>
     </fieldset>
     <fieldset>
         <label for="curriculo">Resumo do Currículo:</label><br>
-        <textarea id="resumo-curriculo" name="curriculo" maxlength="1000" rows="4" cols="50"></textarea><br>
+        <textarea class="dados-cadastro" id="resumo-curriculo" name="curriculo" maxlength="1000" rows="4" cols="50"></textarea><br>
         <label for="cargo">Cargo Atual:</label>
-        <input type="text" id="cargo-atual" name="cargo" maxlength="40"><br><br>
+        <input type="text" class="dados-cadastro" id="cargo-atual" name="cargo" maxlength="40"><br><br>
         <label for="cargo-descrito">Descrição do cargo:</label>
-        <input type="text" id="cargo-descricao" name="cargo-descrito" maxlength="500"><br><br>
+        <input type="text" class="dados-cadastro" id="cargo-descricao" name="cargo-descrito" maxlength="500"><br><br>
         <label for="date">Data de início:</label>
         <input type="text" id="dates" name="date" maxlength="10"><br><br>
+    <button id="btn">Submit</button>
+    <button id="btn-clear">Limpar</button>
+    <div id="dados"></div>
     </fieldset>
     </form>
 </main>
